<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_now_playing_t"/>
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/nav_popular_t"/>
        <item
            android:id="@+id/nav_toprated"
            android:icon="@drawable/ic_top_rated_yellow_24dp"
            android:title="@string/nav_top_rated_t"/>
    </group>

    <item android:title="@string/nav_saved">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_favorite_red_24dp"
                android:title="@string/nav_favorites_t"/>
            <item
                android:id="@+id/nav_to_watch"
                android:icon="@drawable/ic_playlist_add_black_24dp"
                android:title="@string/nav_to_watch_t"/>
        </menu>
    </item>

</menu>
