<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_album_radius"
    app:contentPadding="@dimen/item_film_cast_card_view_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_cast_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/colorViewBg">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/placeholder_image"
                app:srcCompat="@drawable/ic_empty_movies"/>

            <ImageView
                android:id="@+id/image_view_cast_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_image"
                android:foreground="?selectableItemBackground"/>

            <ProgressBar
                android:id="@+id/pb_load_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>
        </FrameLayout>

        <TextView
            android:id="@+id/text_view_cast_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_film_cast_cast_name_margin_top"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/BodyBold"
            tools:text="@string/actor_name"/>

        <TextView
            android:id="@+id/text_view_character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/CaptionItalic"
            tools:text="@string/character_name"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
