<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/layout_rating"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="158dp"
    tools:layout_editor_absoluteY="107dp"
    tools:showIn="@layout/content_movie_details">

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/RatingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar"
        app:layout_constraintVertical_bias="0.006">

        <TextView
            android:id="@+id/text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/Display"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"
            tools:text="@string/eight_point_five"/>

        <TextView
            android:id="@+id/text_view_rating_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/out_of_10"
            android:textAlignment="center"
            android:textAppearance="@style/SubHeading"
            app:layout_constraintStart_toEndOf="@+id/text_view_rating"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"/>

        <TextView
            android:id="@+id/text_view_rating_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:accessibilityHeading="false"
            android:textAlignment="center"
            android:textAppearance="@style/SubHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_rating_out_of"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar"
            tools:text="@string/ten_thousand"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>